--- a/00-html-css/index.html
+++ b/00-html-css/index.html
@@ -94,7 +94,7 @@
   </main>
 
   <footer>
-    <small>&copy; 2025 DevJobs. Todos los derechos reservados.</small>
+    <small>&copy; 2025 DevJobs. Todos los derechos reservados kaistenYT.</small>
   </footer>
 
 
